# sidecar

./: .gitignore  .mcp.json  README.md  pyproject.toml
schemas/: prompt.schema.json
sidecar/: cli.py  errors.py  models.py  server.py  storage.py  template.py
sidecar/extraction/: analyzer.py  briefing.py  differ.py  filter.py  models.py  reader.py
sidecar/hooks/: __init__.py  common.py  installer.py  on_pre_compact.py  on_stop.py
sidecar/tools/: prompts.py  sessions.py
tests/: test_briefing.py  test_cli.py  test_cli_analyze_background.py  test_cli_briefing_views.py  test_cli_setup.py  test_differ.py  test_filter.py  test_hooks_common.py  test_hooks_on_pre_compact.py  test_hooks_on_stop.py  test_installer.py  test_integration.py  test_reader.py  test_storage.py  test_template.py
