[project]
name = "sidecar"
version = "0.2.0"
description = "MCP server and CLI that analyzes Claude Code sessions to generate structured development briefings — capturing what got built, architectural decisions, patterns used, and potential issues."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["claude", "mcp", "ai", "developer-tools", "session-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.40",
    "click>=8.0",
    "jsonschema>=4.20",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/realestone/sidecar"

[project.scripts]
sidecar = "sidecar.server:main"
sidecar-cli = "sidecar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
